--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,10 +29,10 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
     server_tokens off;
-    client_max_body_size 1M;              # Strict limit for most endpoints
-    client_body_buffer_size 16k;          # Smaller buffer for security
-    client_header_buffer_size 2k;         # Smaller header buffer
-    large_client_header_buffers 4 8k;     # Fewer header buffers
+    client_max_body_size 1M;              # Default limit
+    client_body_buffer_size 16k;
+    client_header_buffer_size 2k;
+    large_client_header_buffers 4 8k;
     
     # GZIP Configuration
     gzip on;
@@ -73,19 +73,17 @@ http {
     set_real_ip_from 198.41.128.0/17;
     real_ip_header CF-Connecting-IP;
     
-    # STRICT Rate limiting zones - Much lower limits for most endpoints
+    # Rate limiting zones - SINGLE LAYER at nginx
     limit_req_zone $binary_remote_addr zone=login_limit:10m rate=10r/m;        # 10 requests per minute for login
     limit_req_zone $binary_remote_addr zone=register_limit:10m rate=5r/m;      # 5 requests per minute for register
     limit_req_zone $binary_remote_addr zone=strict_limit:10m rate=30r/m;       # 30 requests per minute for general endpoints
     limit_req_zone $binary_remote_addr zone=health_limit:10m rate=60r/m;       # 60 requests per minute for health checks
-    
-    # UNLIMITED zones for chat and admin (only accessible to authenticated users)
-    limit_req_zone $binary_remote_addr zone=chat_unlimited:10m rate=10000r/m;  # Unlimited for chat
-    limit_req_zone $binary_remote_addr zone=admin_unlimited:10m rate=10000r/m; # Unlimited for admin
+    limit_req_zone $binary_remote_addr zone=chat_unlimited:10m rate=1000r/m;   # High limit for chat (authenticated users)
+    limit_req_zone $binary_remote_addr zone=admin_unlimited:10m rate=500r/m;   # High limit for admin (authenticated users)
     
     limit_req_status 429;
 
-    # IP Whitelisting - FIXED: Allow all IPs by default
+    # IP Whitelisting - Allow all IPs by default
     geo $allowed_ip {
         default 1;                      # ALLOW ALL by default
         # You can add specific blocks here if needed:
@@ -93,70 +91,37 @@ http {
         # 192.168.1.0/24 0;            # Block specific range
     }
 
-    # Upstream definition with standard settings
-    upstream quart_backend {
-        server quart-app:8000 max_fails=3 fail_timeout=30s;
-        keepalive 32;                 # Reasonable keep-alive connections
-        keepalive_requests 1000;      # Standard requests per connection
-        keepalive_timeout 60s;        # Standard keepalive timeout
-    }
-
-    # Default server block
+    # Main server block - NO UPSTREAM NEEDED
     server {
         listen 80 default_server;
-        server_name _;
+        server_name localhost ai.junder.uk _;
         
-        root /usr/share/nginx/html;
-        
-        location / {
-            return 403;
-        }
-        
-        error_page 403 /unauthorized.html;
-        location = /unauthorized.html {
-            root /usr/share/nginx/html;
-            internal;
-        }
-    }
-
-    # Main server block
-    server {
-        listen 80;
-        server_name localhost ai.junder.uk;
-        
-        # IP Access Control - FIXED: Only block if specifically denied
+        # IP Access Control
         if ($allowed_ip = 0) {
             return 403;
         }
 
         root /usr/share/nginx/html;
 
-        # Static files - STRICT limits
+        # Static files - serve directly from nginx
         location /static/ {
             limit_req zone=strict_limit burst=10 nodelay;
             
             alias /usr/share/nginx/html/static/;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000";
-            
-            # Standard timeouts for static files
-            proxy_connect_timeout 5s;
-            proxy_send_timeout 10s;
-            proxy_read_timeout 10s;
         }
         
-        # Health check endpoint - MODERATE limits
+        # Health check endpoint
         location /health {
             limit_req zone=health_limit burst=20 nodelay;
             
             access_log off;
-            proxy_pass http://quart_backend/health;
+            proxy_pass http://quart-app:8000/health;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Ssl on;
-            proxy_set_header X-Forwarded-Port 443;
             
             # Standard timeouts for health checks
             proxy_connect_timeout 5s;
@@ -164,20 +129,18 @@ http {
             proxy_read_timeout 10s;
         }
         
-        # Chat endpoints - UNLIMITED for authenticated users only
+        # Chat endpoints - Higher limits for authenticated users
         location ~ ^/chat {
-            limit_req zone=chat_unlimited burst=1000 nodelay;
+            limit_req zone=chat_unlimited burst=100 nodelay;
             
             # Larger body size for chat messages
             client_max_body_size 10M;
             
-            proxy_pass http://quart_backend;
+            proxy_pass http://quart-app:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Ssl on;
-            proxy_set_header X-Forwarded-Port 443;
             
             # UNLIMITED TIMEOUTS for chat streaming
             proxy_buffering off;
@@ -190,20 +153,18 @@ http {
             proxy_read_timeout 0;
         }
         
-        # Admin endpoints - UNLIMITED for admin users only
+        # Admin endpoints - Higher limits for admin users
         location /admin {
-            limit_req zone=admin_unlimited burst=1000 nodelay;
+            limit_req zone=admin_unlimited burst=50 nodelay;
             
             # Larger body size for admin operations
             client_max_body_size 5M;
             
-            proxy_pass http://quart_backend/admin;
+            proxy_pass http://quart-app:8000/admin;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Ssl on;
-            proxy_set_header X-Forwarded-Port 443;
             
             # UNLIMITED TIMEOUTS for admin operations
             proxy_connect_timeout 0;
@@ -215,13 +176,11 @@ http {
         location /login {
             limit_req zone=login_limit burst=3 nodelay;
             
-            proxy_pass http://quart_backend/login;
+            proxy_pass http://quart-app:8000/login;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Ssl on;
-            proxy_set_header X-Forwarded-Port 443;
             
             # STRICT timeouts for auth endpoints
             proxy_connect_timeout 10s;
@@ -232,13 +191,11 @@ http {
         location /register {
             limit_req zone=register_limit burst=2 nodelay;
             
-            proxy_pass http://quart_backend/register;
+            proxy_pass http://quart-app:8000/register;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Ssl on;
-            proxy_set_header X-Forwarded-Port 443;
             
             # STRICT timeouts for auth endpoints
             proxy_connect_timeout 10s;
@@ -249,13 +206,11 @@ http {
         location /logout {
             limit_req zone=strict_limit burst=5 nodelay;
             
-            proxy_pass http://quart_backend/logout;
+            proxy_pass http://quart-app:8000/logout;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Ssl on;
-            proxy_set_header X-Forwarded-Port 443;
             
             # STRICT timeouts
             proxy_connect_timeout 10s;
@@ -267,13 +222,11 @@ http {
         location / {
             limit_req zone=strict_limit burst=10 nodelay;
             
-            proxy_pass http://quart_backend;
+            proxy_pass http://quart-app:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Ssl on;
-            proxy_set_header X-Forwarded-Port 443;
             
             # STRICT timeouts for general requests
             proxy_connect_timeout 10s;
