404 still on chat admin

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # Quart Application Security (REQUIRED TO CHANGE)
 SECRET_KEY=CHANGE-THIS-TO-A-SECURE-RANDOM-STRING-32-CHARACTERS-MINIMUM
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=CHANGE-THIS-SECURE-PASSWORD
+ADMIN_PASSWORD=admin
 ADMIN_USER_ID=admin
 
 # Domain Configuration (REQUIRED TO CHANGE)
