--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -91,7 +91,15 @@ http {
         # 192.168.1.0/24 0;            # Block specific range
     }
 
-    # Main server block - NO UPSTREAM NEEDED
+    # FIXED: Add upstream definition for quart-app
+    upstream quart_backend {
+        server quart-app:8000 max_fails=3 fail_timeout=30s;
+        keepalive 32;
+        keepalive_requests 1000;
+        keepalive_timeout 60s;
+    }
+
+    # Main server block
     server {
         listen 80 default_server;
         server_name localhost ai.junder.uk _;
@@ -117,7 +125,7 @@ http {
             limit_req zone=health_limit burst=20 nodelay;
             
             access_log off;
-            proxy_pass http://quart-app:8000/health;
+            proxy_pass http://quart_backend/health;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -136,7 +144,7 @@ http {
             # Larger body size for chat messages
             client_max_body_size 10M;
             
-            proxy_pass http://quart-app:8000;
+            proxy_pass http://quart_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -160,7 +168,7 @@ http {
             # Larger body size for admin operations
             client_max_body_size 5M;
             
-            proxy_pass http://quart-app:8000/admin;
+            proxy_pass http://quart_backend/admin;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -176,7 +184,7 @@ http {
         location /login {
             limit_req zone=login_limit burst=3 nodelay;
             
-            proxy_pass http://quart-app:8000/login;
+            proxy_pass http://quart_backend/login;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -191,7 +199,7 @@ http {
         location /register {
             limit_req zone=register_limit burst=2 nodelay;
             
-            proxy_pass http://quart-app:8000/register;
+            proxy_pass http://quart_backend/register;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -206,7 +214,7 @@ http {
         location /logout {
             limit_req zone=strict_limit burst=5 nodelay;
             
-            proxy_pass http://quart-app:8000/logout;
+            proxy_pass http://quart_backend/logout;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -222,7 +230,7 @@ http {
         location / {
             limit_req zone=strict_limit burst=10 nodelay;
             
-            proxy_pass http://quart-app:8000;
+            proxy_pass http://quart_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
