--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -111,7 +111,9 @@ http {
 
         root /usr/share/nginx/html;
 
-        # Static files - serve directly from nginx
+        # =====================================================
+        # STATIC FILES - served directly from nginx
+        # =====================================================
         location /static/ {
             limit_req zone=strict_limit burst=10 nodelay;
             
@@ -120,8 +122,10 @@ http {
             add_header Cache-Control "public, max-age=2592000";
         }
         
-        # Health check endpoint
-        location /health {
+        # =====================================================
+        # HEALTH CHECK ENDPOINT - Simple proxy
+        # =====================================================
+        location = /health {
             limit_req zone=health_limit burst=20 nodelay;
             
             access_log off;
@@ -137,51 +141,12 @@ http {
             proxy_read_timeout 10s;
         }
         
-        # Chat endpoints - Higher limits for authenticated users
-        location ~ ^/chat {
-            limit_req zone=chat_unlimited burst=100 nodelay;
-            
-            # Larger body size for chat messages
-            client_max_body_size 10M;
-            
-            proxy_pass http://quart_backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # UNLIMITED TIMEOUTS for chat streaming
-            proxy_buffering off;
-            proxy_cache off;
-            proxy_request_buffering off;
-            proxy_set_header Connection "";
-            proxy_http_version 1.1;
-            proxy_connect_timeout 0;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
-        }
+        # =====================================================
+        # AUTHENTICATION ROUTES - STRICT rate limits
+        # =====================================================
         
-        # Admin endpoints - Higher limits for admin users
-        location /admin {
-            limit_req zone=admin_unlimited burst=50 nodelay;
-            
-            # Larger body size for admin operations
-            client_max_body_size 5M;
-            
-            proxy_pass http://quart_backend/admin;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # UNLIMITED TIMEOUTS for admin operations
-            proxy_connect_timeout 0;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
-        }
-        
-        # Authentication endpoints - STRICT limits
-        location /login {
+        # Login endpoint - VERY strict limits
+        location = /login {
             limit_req zone=login_limit burst=3 nodelay;
             
             proxy_pass http://quart_backend/login;
@@ -196,7 +161,8 @@ http {
             proxy_read_timeout 30s;
         }
         
-        location /register {
+        # Register endpoint - VERY strict limits
+        location = /register {
             limit_req zone=register_limit burst=2 nodelay;
             
             proxy_pass http://quart_backend/register;
@@ -211,7 +177,8 @@ http {
             proxy_read_timeout 30s;
         }
         
-        location /logout {
+        # Logout endpoint - Standard limits
+        location = /logout {
             limit_req zone=strict_limit burst=5 nodelay;
             
             proxy_pass http://quart_backend/logout;
@@ -226,37 +193,371 @@ http {
             proxy_read_timeout 30s;
         }
         
-        # All other requests - STRICT limits
-        location / {
-            limit_req zone=strict_limit burst=10 nodelay;
+        # =====================================================
+        # CHAT ROUTES - Higher limits for authenticated users
+        # =====================================================
+        
+        # Main chat page
+        location = /chat {
+            limit_req zone=chat_unlimited burst=100 nodelay;
             
-            proxy_pass http://quart_backend;
+            client_max_body_size 10M;
+            
+            proxy_pass http://quart_backend/chat;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
-            # STRICT timeouts for general requests
+            # Standard timeouts for GET requests
             proxy_connect_timeout 10s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
         }
+        
+        # New chat page
+        location = /chat/new {
+            limit_req zone=chat_unlimited burst=100 nodelay;
+            
+            proxy_pass http://quart_backend/chat/new;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Standard timeouts
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+        
+        # Chat streaming endpoint - UNLIMITED timeouts
+        location = /chat/stream {
+            limit_req zone=chat_unlimited burst=50 nodelay;
+            
+            proxy_pass http://quart_backend/chat/stream;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # UNLIMITED TIMEOUTS for streaming
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_request_buffering off;
+            proxy_set_header Connection "";
+            proxy_http_version 1.1;
+            proxy_connect_timeout 0;
+            proxy_send_timeout 0;
+            proxy_read_timeout 0;
+        }
+        
+        # Chat interrupt endpoint
+        location = /chat/interrupt {
+            limit_req zone=chat_unlimited burst=20 nodelay;
+            
+            proxy_pass http://quart_backend/chat/interrupt;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Quick timeouts for interrupt
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
+        }
+        
+        # Chat clear endpoint
+        location = /chat/clear {
+            limit_req zone=chat_unlimited burst=10 nodelay;
+            
+            proxy_pass http://quart_backend/chat/clear;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Standard timeouts
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+        
+        # Chat test endpoint
+        location = /chat/test {
+            limit_req zone=chat_unlimited burst=20 nodelay;
+            
+            proxy_pass http://quart_backend/chat/test;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Quick timeouts for test
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
+        }
+        
+        # Chat health endpoint
+        location = /chat/health {
+            limit_req zone=chat_unlimited burst=20 nodelay;
+            
+            proxy_pass http://quart_backend/chat/health;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Quick timeouts for health
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
+        }
+        
+        # Chat session deletion
+        location = /chat/delete_session {
+            limit_req zone=chat_unlimited burst=10 nodelay;
+            
+            proxy_pass http://quart_backend/chat/delete_session;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Standard timeouts
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+        
+        # =====================================================
+        # ADMIN ROUTES - Higher limits for admin users
+        # =====================================================
+        
+        # Main admin dashboard
+        location = /admin {
+            limit_req zone=admin_unlimited burst=50 nodelay;
+            
+            client_max_body_size 5M;
+            
+            proxy_pass http://quart_backend/admin;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # UNLIMITED TIMEOUTS for admin operations
+            proxy_connect_timeout 0;
+            proxy_send_timeout 0;
+            proxy_read_timeout 0;
+        }
+        
+        # Admin test endpoint
+        location = /admin/test {
+            limit_req zone=admin_unlimited burst=20 nodelay;
+            
+            proxy_pass http://quart_backend/admin/test;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Quick timeouts for test
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 10s;
+        }
+        
+        # Admin cleanup operations
+        location = /admin/cleanup {
+            limit_req zone=admin_unlimited burst=5 nodelay;
+            
+            proxy_pass http://quart_backend/admin/cleanup;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Extended timeouts for cleanup operations
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 120s;
+        }
+        
+        # Admin approve user
+        location = /admin/approve_user {
+            limit_req zone=admin_unlimited burst=10 nodelay;
+            
+            proxy_pass http://quart_backend/admin/approve_user;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Standard timeouts
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+        
+        # Admin reject user
+        location = /admin/reject_user {
+            limit_req zone=admin_unlimited burst=10 nodelay;
+            
+            proxy_pass http://quart_backend/admin/reject_user;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Standard timeouts
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+        
+        # Admin user detail pages (dynamic user IDs)
+        location ~ ^/admin/user/([a-zA-Z0-9_-]+)$ {
+            limit_req zone=admin_unlimited burst=20 nodelay;
+            
+            proxy_pass http://quart_backend/admin/user/$1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Extended timeouts for user detail loading
+            proxy_connect_timeout 15s;
+            proxy_send_timeout 45s;
+            proxy_read_timeout 60s;
+        }
+        
+        # Admin user deletion (dynamic user IDs)
+        location ~ ^/admin/user/([a-zA-Z0-9_-]+)/delete$ {
+            limit_req zone=admin_unlimited burst=5 nodelay;
+            
+            proxy_pass http://quart_backend/admin/user/$1/delete;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Extended timeouts for user deletion
+            proxy_connect_timeout 15s;
+            proxy_send_timeout 45s;
+            proxy_read_timeout 60s;
+        }
+        
+        # =====================================================
+        # ROOT ROUTE - Redirect logic handled by Quart
+        # =====================================================
+        location = / {
+            limit_req zone=strict_limit burst=10 nodelay;
+            
+            proxy_pass http://quart_backend/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Standard timeouts
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+        
+        # =====================================================
+        # SECURITY BLOCKS - Block everything else
+        # =====================================================
         
         # Block access to sensitive paths
         location ~ /\. {
             deny all;
             access_log off;
             log_not_found off;
+            return 404;
         }
         
-        # Block access to common attack vectors
-        location ~ \.(php|asp|aspx|jsp|cgi)$ {
+        # Block access to common attack vectors and script files
+        location ~ \.(php|asp|aspx|jsp|cgi|pl|py|rb|sh|bat|cmd)$ {
             deny all;
             access_log off;
             log_not_found off;
+            return 404;
         }
         
-        # Error pages
+        # Block common WordPress/CMS paths
+        location ~ ^/(wp-|wordpress|drupal|joomla|admin\.php|phpmyadmin|cpanel|cgi-bin) {
+            deny all;
+            access_log off;
+            log_not_found off;
+            return 404;
+        }
+        
+        # Block common config and backup files
+        location ~ \.(conf|config|bak|backup|old|orig|save|swp|tmp|temp|log)$ {
+            deny all;
+            access_log off;
+            log_not_found off;
+            return 404;
+        }
+        
+        # Block SQL dumps and database files
+        location ~ \.(sql|db|sqlite|sqlite3|mdb)$ {
+            deny all;
+            access_log off;
+            log_not_found off;
+            return 404;
+        }
+        
+        # Block version control directories
+        location ~ /\.(git|svn|hg|bzr) {
+            deny all;
+            access_log off;
+            log_not_found off;
+            return 404;
+        }
+        
+        # Block common scanning paths
+        location ~ ^/(robots\.txt|favicon\.ico|sitemap\.xml|crossdomain\.xml)$ {
+            deny all;
+            access_log off;
+            log_not_found off;
+            return 404;
+        }
+        
+        # Block any other chat paths not explicitly allowed
+        location ~ ^/chat/ {
+            # This catches any /chat/* paths not explicitly defined above
+            deny all;
+            access_log off;
+            log_not_found off;
+            return 404;
+        }
+        
+        # Block any other admin paths not explicitly allowed
+        location ~ ^/admin/ {
+            # This catches any /admin/* paths not explicitly defined above
+            deny all;
+            access_log off;
+            log_not_found off;
+            return 404;
+        }
+        
+        # FINAL CATCH-ALL - Block everything else
+        location / {
+            # This catches ANY path not explicitly defined above
+            deny all;
+            access_log off;
+            log_not_found off;
+            return 404;
+        }
+        
+        # =====================================================
+        # ERROR PAGES
+        # =====================================================
         error_page 403 /unauthorized.html;
         location = /unauthorized.html {
             root /usr/share/nginx/html;
@@ -271,6 +572,13 @@ http {
         
         error_page 502 503 504 /50x.html;
         location = /50x.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+        
+        # Custom 404 page for blocked routes
+        error_page 404 /404.html;
+        location = /404.html {
             root /usr/share/nginx/html;
             internal;
         }
