try catch removals, chat/new removal heath check on ollama and redis only

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ ADMIN_PASSWORD=admin
 ADMIN_USER_ID=admin
 
 # Domain Configuration (REQUIRED TO CHANGE)
-ALLOWED_DOMAINS=localhost,127.0.0.1,your-domain.com
+ALLOWED_DOMAINS=localhost,127.0.0.1,ai.junder.uk
 
 # Redis Connection (CHANGE IF USING EXTERNAL REDIS)
 REDIS_URL=redis://redis:6379/0
@@ -52,18 +52,18 @@ NGINX_CPU=1
 # 🌐 NETWORK OPTIMIZATION SETTINGS
 # =============================================================================
 # Network buffer sizes (bytes)
-NET_CORE_RMEM_MAX=134217728
-NET_CORE_WMEM_MAX=134217728
-NET_IPV4_TCP_RMEM=4096 131072 134217728
-NET_IPV4_TCP_WMEM=4096 131072 134217728
+#NET_CORE_RMEM_MAX=134217728
+#NET_CORE_WMEM_MAX=134217728
+#NET_IPV4_TCP_RMEM=4096 131072 134217728
+#NET_IPV4_TCP_WMEM=4096 131072 134217728
 
 # File descriptor limits
-ULIMIT_NOFILE_SOFT=65536
-ULIMIT_NOFILE_HARD=65536
+#ULIMIT_NOFILE_SOFT=65536
+#ULIMIT_NOFILE_HARD=65536
 
 # Docker network settings
-DOCKER_SUBNET=172.21.0.0/16
-DOCKER_MTU=9000
+#DOCKER_SUBNET=172.21.0.0/16
+#DOCKER_MTU=1500
 
 # =============================================================================
 # UNLIMITED TIMEOUT SETTINGS
