--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -196,22 +196,6 @@ http {
             proxy_read_timeout 30s;
         }
         
-        # New chat page
-        location = /chat/new {
-            limit_req zone=chat_unlimited burst=100 nodelay;
-            
-            proxy_pass http://quart_backend/chat/new;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Standard timeouts
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
-        }
-        
         # Chat streaming endpoint - UNLIMITED timeouts
         location = /chat/stream {
             limit_req zone=chat_unlimited burst=50 nodelay;
@@ -420,15 +404,7 @@ http {
             log_not_found off;
             return 404;
         }
-        
-        # Block common WordPress/CMS paths
-        location ~ ^/(wp-|wordpress|drupal|joomla|admin\.php|phpmyadmin|cpanel|cgi-bin) {
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
-        }
-        
+                
         # Block common config and backup files
         location ~ \.(conf|config|bak|backup|old|orig|save|swp|tmp|temp|log)$ {
             deny all;
@@ -471,13 +447,13 @@ http {
         }
         
         # Block any other admin paths not explicitly allowed
-        location ~ ^/admin/ {
+        #location ~ ^/admin/ {
             # This catches any /admin/* paths not explicitly defined above
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
-        }
+        #    deny all;
+        #    access_log off;
+        #    log_not_found off;
+        #    return 404;
+        #}
         
         # FINAL CATCH-ALL - Block everything else
         location / {
